plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.6.1'
}

group = 'me.arthed.walljump'
version = '2.1.0'

java {
    // Minecraft 26.1+ requires Java 25
    toolchain.languageVersion = JavaLanguageVersion.of(25)
}

repositories {
    mavenCentral()
    maven {
        name = 'papermc'
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
    maven {
        name = 'enginehub'
        url = 'https://maven.enginehub.org/repo/'
    }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:26.2.build.+'
    compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.16'

    implementation 'org.bstats:bstats-bukkit:3.2.1'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 25
}

processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset = 'UTF-8'
    filesMatching('plugin.yml') {
        expand props
    }
}

shadowJar {
    archiveClassifier = ''
    relocate 'org.bstats', 'me.arthed.walljump.libs.bstats'
}

tasks.named('jar') {
    enabled = false
}

tasks.named('assemble') {
    dependsOn shadowJar
}
